gzip all MCMC output using gzstream

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,17 @@ project(selection)
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED YES)
 
+SET(GCC_LINK_FLAGS "-lz")
+SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${GCC_LINK_FLAGS}")
+
 include_directories(.)
 
 add_executable(selection
         main.cpp
         MbRandom.cpp
         MbRandom.h
+        gzstream.cpp
+        gzstream.h
         mcmc.cpp
         mcmc.h
         measure.cpp
